# aleth

./: .gitignore  README.md
code/aleth/: README.md
code/experiments_figures_tables/: 2b_figure.py  2c_figure.py  4_table.py  4a_4b_figure.py  5_table.py  5a_5b_figure.py  README.md  requirements.txt
code/experiments_figures_tables/results/aleth/: README.md
code/experiments_figures_tables/results/aleth/src/aleth/: cli.py  config.py  pyproject.toml
code/experiments_figures_tables/results/aleth/src/aleth/llm_processor/: __init__.py  intent_parser.py  range_estimator.py
code/experiments_figures_tables/results/aleth/src/aleth/model_registry/: operators.py
code/experiments_figures_tables/results/aleth/src/aleth/simulation_engine/: __init__.py  data_generator.py
data/electrical_metering_bgdp2/: README.md
data/electrical_metering_bgdp2/archive_files/: rebuild_data_files.sh
data/occupancy_uci/: README.md
data/temperature_umurcia_pleiadata/: README.md
data/temperature_umurcia_pleiadata/archive_files/: rebuild_data_files.sh
experiments/: README.md  requirements.txt
experiments/evaluation/ashrae_rmsle/: evaluation.py  requirements.txt
experiments/evaluation/granger/: requirements.txt
experiments/evaluation/granger/compressed_data/: SHA256SUMS
experiments/figures_and_tables/: 1_figure.py  2a_figure.py  3a_figure.py  6a_6b_6c_6d_figure.py  7a_7b_7c_7d_figure.py  8a_8b_figure.py
src/aleth/: cli.py
src/aleth/model_registry/: __init__.py  stream_examples.py
src/aleth/simulation_engine/: simulation_orchestrator.py  spec_generator.py
(+1992 files in other folders)
